# Specter

./: .env.example  .gitignore  README.md  pyproject.toml  specter.code-workspace
docs/: skanf-interface.md
src/specter/: cli.py  config.py  errors.py  logging_config.py  models.py
src/specter/output/: json_out.py  markdown.py
src/specter/pipeline/: agent.py  parser.py  runner.py  validator.py
src/specter/resources/: find_call_pcs.py  gigahorse_ops_arm64_patch.py
tests/: conftest.py  test_agent.py  test_cli.py  test_config.py  test_errors.py  test_json_out.py  test_logging_config.py  test_markdown.py  test_models.py  test_output_flags.py  test_parse_target.py  test_parser.py  test_runner.py  test_validator.py  test_validator_gaps.py
tests/fixtures/: skanf_clean.txt  skanf_malformed.txt  skanf_stalled.txt  skanf_success.txt
tests/fixtures/agent_responses/: malformed.json  valid_calldata.json
tests/fixtures/validator/: validation_error.txt  validation_no_path.txt  validation_stall.txt  validation_success.txt
