[project]
name = "specter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Zoll", email = "buadesoye@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.25",
    "openai>=1.0",
    "google-genai>=1.0",
    "eth-hash[pycryptodome]>=0.7.1",
    "eth-utils>=5.3.1",
    "httpx>=0.27",
    "pydantic>=2.0",
    "typer>=0.24.1",
]

[project.scripts]
specter = "specter.cli:app"

[build-system]
requires = ["uv_build>=0.10.10,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=1.10",
    "pytest>=8.0",
    "ruff>=0.4",
]
